tdf#150104 Use 128 chars to store printer name in PrintSetup

So far, only 64 chars were used for the printer name
in the `ImplOldJobSetupData` struct that is part of what gets
serialized into the "PrinterSetup" config item in
settings.xml when saving printer settings to the document
(s. `WriteJobSetup`). Longer printer names got truncated,
and only the truncated name got restored.

This increases the length to 128 chars, by dropping
the unused `cDeviceName` and `cPortName` members and
using the space they occupied for the printer name
as well. They were unused ever since

    commit 8ab086b6cc054501bfbf7ef6fa509c393691e860
    Date:   Mon Sep 18 16:07:07 2000 +0000

        initial import

ODF spec, version 1.3, section 3.1.3.5 says this on settings.xml:

> 3.1.3.5 <office:document-settings>
> The <office:document-settings> root element contains
> implementation-dependent settings. The file within a
> package for the <office:document-settings> element is
> settings.xml.

Since the settings are implementation-dependent,
changing the exact format and content of
the data in "PrinterSetup" should be unproblematic,
as long as compatibility with older application versions
is maintained.
Given that older versions still truncate the name after 31
chars on file open, the behaviour when opening files
stored with LibreOffice versions containing this change in
oder versions should be unaffected.
Since older versions write explicit 0 bytes, behaviour
when opening files written by older versions with LO
versions containing this change is also unaffected.
This means that the longer printer name will only have
an actual effect when version containing this change are used
for both writing and opening the document.

While increasing the amount of chars used for the printer
name doesn't fully eliminate the potential problem of
printer or driver name getting truncated, it further
reduces the risk. In particular in combination
with the following commit,
Change-Id I3be764597eced8e855282cdeb7c374df4e54e605,
"tdf#150104 Map truncated printer/driver name to existing printer",
finding the correct printer should work reasonably
well in practice, without the need to more fundamentally
change the format that printer settings are stored in the doc
(potentially with the need to still support the old format in parallel
for backwards-compatibility, maybe also for the
`XPrinterPropertySet::getBinarySetup` and
`XPrinterPropertySet::setBinarySetup` UNO API methods).

Change-Id: I55bed58023fa7a078525add79b13f2310aa9a9dd